# texture-map-gen

./: .gitignore  .gitmodules  Build.bat  CMakeLists.txt  CMakePresets.json  Cairo.sln  TextureMapGen.sln  main.cpp  msk-app.cpp  msk-app.h  msk-core.cpp  msk-enum.h  msk-gl-font.cpp  msk-gl-font.h  msk-gl-fragment.cpp  msk-gl-fragment.h  msk-gl-line-renderer.cpp  msk-gl-line-renderer.h  msk-gl-main-scene.cpp  msk-gl-main-scene.h  msk-gl-material.cpp  msk-gl-material.h  msk-gl-mesh-builder.cpp  msk-gl-mesh-builder.h  msk-gl-mesh.cpp  msk-gl-mesh.h  msk-gl-multisampleframerenderer.cpp  msk-gl-multisampleframerenderer.h  msk-gl-renderer.cpp  msk-gl-renderer.h  msk-gl-scene.cpp  msk-gl-scene.h  msk-gl-shader.cpp  msk-gl-shader.h  msk-gl-shaderprogram.cpp  msk-gl-shaderprogram.h  msk-gl-spritebatch.cpp  msk-gl-spritebatch.h  msk-gl-stencil-renderer.cpp  msk-gl-stencil-renderer.h  (+27 more)
Cairo/: Cairo.vcxproj  Cairo.vcxproj.filters  cairo-error-inline.h  cairo-gl-composite.c  cairo-gl-device.c  cairo-gl-gradient-private.h  cairo-gl-private.h  cairo-pdf-surface.c  cairo-svg-surface.c  cairo-wgl-context.c  cairo-win32-device.c  cairo-win32-font.c  cairo-win32-gdi-compositor.c  cairo.h  check-has-hidden-symbols.c  check-link.c
CairoTest/: CairoTest.rc  CairoTest.vcxproj  CairoTest.vcxproj.filters  material_texture.glfs  msk-app.cpp  msk-app.h  msk-cairo-object.cpp  msk-cairo-rectangle.cpp  msk-cairo.cpp  msk-core.cpp  msk-core.h  msk-event.cpp  msk-eventhandler.h  msk-gl-font.h  msk-gl-linerenderer.cpp  msk-gl-linerenderer.h  msk-gl-mesh.cpp  msk-gl-mesh.h  msk-gl-multisampleframerenderer.cpp  msk-gl-polyhedronshape.cpp  msk-gl-polyhedronshape.h  msk-gl-scene-filemenu.cpp  msk-gl-scene-filemenu.h  msk-gl-shader.cpp  msk-gl-shader.h  msk-gl-shaderprogram.cpp  msk-gl-shaperenderer.cpp  msk-gl-shaperenderer.h  msk-gl-text.cpp  msk-gl-textrenderer.cpp  msk-gl-textrenderer.h  msk-gl-texture.cpp  msk-gl-texture.h  msk-gl-textureatlas.cpp  msk-gl-textureregion.cpp  msk-gl-texturerenderer.cpp  msk-gl-texturerenderer.h  msk-gl-vertexarray.cpp  msk-gl-vertexattributes.cpp  msk-gl-vertexattributes.h  (+16 more)
MskCore/: MskCore.vcxproj  MskCore.vcxproj.filters  msk-app.cpp  msk-app.h  msk-core.cpp  msk-core.h  msk-enum.h  msk-event.cpp  msk-event.h  msk-eventargs.h  msk-eventhandler.cpp  msk-eventhandler.h  msk-gl-event-args.cpp  msk-gl-font.cpp  msk-gl-font.h  msk-gl-fragment.cpp  msk-gl-fragment.h  msk-gl-line-renderer.cpp  msk-gl-line-renderer.h  msk-gl-main-scene.cpp  msk-gl-main-scene.h  msk-gl-material.cpp  msk-gl-material.h  msk-gl-mesh-builder.cpp  msk-gl-mesh-builder.h  msk-gl-mesh.cpp  msk-gl-mesh.h  msk-gl-multisampleframerenderer.cpp  msk-gl-multisampleframerenderer.h  msk-gl-renderer.cpp  msk-gl-renderer.h  msk-gl-scene.cpp  msk-gl-scene.h  msk-gl-shader.cpp  msk-gl-shader.h  msk-gl-shaderprogram.cpp  msk-gl-shaderprogram.h  msk-gl-spritebatch.cpp  msk-gl-spritebatch.h  msk-gl-stencil-renderer.cpp  (+21 more)
TextureMapGen/: TextureMapGen.vcxproj  TextureMapGen.vcxproj.filters  basic_texture.glfs  basic_texture.glvs  material_texture.glfs  material_texture.glvs  msk-app.cpp  msk-app.h  msk-cairo-object.h  msk-cairo-rectangle.h  msk-cairo.h  msk-core.h  msk-event.h  msk-eventargs.cpp  msk-eventargs.h  msk-gl-font.cpp  msk-gl-framerenderer.cpp  msk-gl-framerenderer.h  msk-gl-linerenderer.cpp  msk-gl-linerenderer.h  msk-gl-manifold.cpp  msk-gl-manifold.h  msk-gl-mesh-builder.cpp  msk-gl-mesh-builder.h  msk-gl-mesh.cpp  msk-gl-mesh.h  msk-gl-multisampleframerenderer.cpp  msk-gl-multisampleframerenderer.h  msk-gl-scene-filemenu.cpp  (+34 more)
(+76 files in other folders)
